--- a/xml.task/MainWindow.xaml
+++ b/xml.task/MainWindow.xaml
@@ -19,5 +19,6 @@
 			SyntaxHighlighting="XML"
 			ShowLineNumbers="True">
 		</avalonedit:TextEditor>
+		<Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="52,105,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
 	</Grid>
 </Window>
