--- a/xml.task/MainWindow.xaml
+++ b/xml.task/MainWindow.xaml
@@ -7,19 +7,23 @@
         xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" x:Class="xml.task.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-	<Grid>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="289*"/>
-			<ColumnDefinition Width="107*"/>
-		</Grid.ColumnDefinitions>
-		<avalonedit:TextEditor
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="289*"/>
+            <ColumnDefinition Width="107*"/>
+        </Grid.ColumnDefinitions>
+        <avalonedit:TextEditor
 			Name="textEditor"
 			FontFamily="Consolas"
 			FontSize="10pt"
 			SyntaxHighlighting="XML"
-			ShowLineNumbers="True">
-		</avalonedit:TextEditor>
-		<Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="52,105,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-		<Button Content="RastrTest" Grid.Column="1" HorizontalAlignment="Left" Margin="52,151,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-	</Grid>
+			ShowLineNumbers="True" Margin="0,80,0,0">
+        </avalonedit:TextEditor>
+        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="52,105,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="RastrTest" Grid.Column="1" HorizontalAlignment="Left" Margin="52,151,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Button x:Name="button" Content="Save" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="button_Click_2"/>
+        <ComboBox x:Name="fileComboBox" Margin="10,37,10,0" VerticalAlignment="Top" IsEditable="True"/>
+        <Button x:Name="button1" Content="Open" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
+        <Button x:Name="button2" Content="Window" Grid.Column="1" HorizontalAlignment="Left" Margin="52,230,0,0" VerticalAlignment="Top" Width="75" Click="button2_Click"/>
+    </Grid>
 </Window>
