--- a/xml.task/MainWindow.xaml
+++ b/xml.task/MainWindow.xaml
@@ -6,24 +6,22 @@
         xmlns:local="clr-namespace:xml.task"
         xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" x:Class="xml.task.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="pnzo" Height="450" Width="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="289*"/>
-            <ColumnDefinition Width="107*"/>
-        </Grid.ColumnDefinitions>
+
         <avalonedit:TextEditor
 			Name="textEditor"
 			FontFamily="Consolas"
 			FontSize="10pt"
 			SyntaxHighlighting="XML"
-			ShowLineNumbers="True" Margin="0,80,0,0">
-        </avalonedit:TextEditor>
-        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="52,105,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <Button Content="RastrTest" Grid.Column="1" HorizontalAlignment="Left" Margin="52,151,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <Button x:Name="button" Content="Save" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="button_Click_2"/>
-        <ComboBox x:Name="fileComboBox" Margin="10,37,10,0" VerticalAlignment="Top" IsEditable="True"/>
-        <Button x:Name="button1" Content="Open" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
-        <Button x:Name="button2" Content="Window" Grid.Column="1" HorizontalAlignment="Left" Margin="52,230,0,0" VerticalAlignment="Top" Width="75" Click="button2_Click"/>
+			ShowLineNumbers="True" Margin="0,68,0,0" AllowDrop="True" PreviewDragOver="textEditor_PreviewDragOver" PreviewDrop="textEditor_PreviewDrop" BorderThickness="1" BorderBrush="Black"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="683,105,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75" Click="saveButton_Click"/>
+        <Button x:Name="openButton" Content="Open" HorizontalAlignment="Left" Margin="250,10,0,0" VerticalAlignment="Top" Width="75" Click="openButton_Click"/>
+        <Button x:Name="executingButton" Content="Run" Margin="0,37,10,0" VerticalAlignment="Top" Click="executingButton_Click" HorizontalAlignment="Right" Width="75"/>
+        <Button x:Name="newButton" Content="New" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="newButton_Click"/>
+        <Button x:Name="saveAsButton" Content="Save as" HorizontalAlignment="Left" Margin="170,10,0,0" VerticalAlignment="Top" Width="75" Click="saveAsButton_Click"/>
+        <Label x:Name="fileLabel" Content="" Margin="10,37,90,0" VerticalAlignment="Top"/>
+        <Button x:Name="exampleButton" Content="Example" Margin="0,10,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="exampleButton_Click"/>
     </Grid>
 </Window>
