--- a/xml.task/ExecutingWindow.xaml
+++ b/xml.task/ExecutingWindow.xaml
@@ -1,12 +1,21 @@
-﻿<Window x:Class="xml.task.ExecutingWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:xml.task"
+        xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" x:Class="xml.task.ExecutingWindow"
         mc:Ignorable="d"
         Title="ExecutingWindow" Height="300" Width="300">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <ListBox x:Name="listBox"/>
+
+        <avalonedit:TextEditor Grid.Row="1"/>
+        <GridSplitter x:Name="gridSplitter" HorizontalAlignment="Left" Height="9" Margin="116,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="121" ResizeDirection="Rows"/>
+
     </Grid>
 </Window>
