--- a/xml.task/MainWindow.xaml
+++ b/xml.task/MainWindow.xaml
@@ -14,14 +14,14 @@
 			FontFamily="Consolas"
 			FontSize="10pt"
 			SyntaxHighlighting="XML"
-			ShowLineNumbers="True" Margin="0,68,0,0" AllowDrop="True" PreviewDragOver="textEditor_PreviewDragOver" PreviewDrop="textEditor_PreviewDrop" BorderThickness="1" BorderBrush="Black"/>
+			ShowLineNumbers="True" Margin="0,68,0,0" AllowDrop="True" PreviewDragOver="textEditor_PreviewDragOver" PreviewDrop="TextEditor_PreviewDrop" BorderThickness="1" BorderBrush="Black"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="683,105,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75" Click="saveButton_Click"/>
         <Button x:Name="openButton" Content="Open" HorizontalAlignment="Left" Margin="250,10,0,0" VerticalAlignment="Top" Width="75" Click="openButton_Click"/>
         <Button x:Name="executingButton" Content="Run" Margin="0,37,10,0" VerticalAlignment="Top" Click="executingButton_Click" HorizontalAlignment="Right" Width="75"/>
-        <Button x:Name="newButton" Content="New" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="newButton_Click"/>
-        <Button x:Name="saveAsButton" Content="Save as" HorizontalAlignment="Left" Margin="170,10,0,0" VerticalAlignment="Top" Width="75" Click="saveAsButton_Click"/>
+        <Button x:Name="newButton" Content="New" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="NewButton_Click"/>
+        <Button x:Name="saveAsButton" Content="Save as" HorizontalAlignment="Left" Margin="170,10,0,0" VerticalAlignment="Top" Width="75" Click="SaveAsButton_Click"/>
         <Label x:Name="fileLabel" Content="" Margin="10,37,90,0" VerticalAlignment="Top"/>
-        <Button x:Name="exampleButton" Content="Example" Margin="0,10,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="exampleButton_Click"/>
+        <Button x:Name="exampleButton" Content="Example" Margin="0,10,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="ExampleButton_Click"/>
     </Grid>
 </Window>
