--- a/xml.task/ExecutingWindow.xaml
+++ b/xml.task/ExecutingWindow.xaml
@@ -6,18 +6,20 @@
         xmlns:local="clr-namespace:xml.task"
         xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" x:Class="xml.task.ExecutingWindow"
         mc:Ignorable="d"
-        Title="ExecutingWindow" Height="300" Width="300" Loaded="Window_Loaded" Unloaded="Window_Unloaded">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="2*"/>
-			<RowDefinition Height="1*"/>
-		</Grid.RowDefinitions>
-		<ListBox x:Name="CommandListBox" SelectionChanged="CommandListBox_SelectionChanged"/>
+        Title="ExecutingWindow" Height="450" Width="600" Loaded="Window_Loaded" Unloaded="Window_Unloaded">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="20"/>
+        </Grid.RowDefinitions>
+        <ListBox x:Name="CommandListBox" SelectionChanged="CommandListBox_SelectionChanged"/>
 
-		<avalonedit:TextEditor Grid.Row="1" 
+        <avalonedit:TextEditor Grid.Row="1" 
                                Name="ResultText" 
                                Margin="0,5,0,0"/>
-		<GridSplitter x:Name="GridSplitter" Height="5" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Top" ResizeDirection="Rows" HorizontalAlignment="Stretch"/>
+        <GridSplitter x:Name="GridSplitter" Height="5" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Top" ResizeDirection="Rows" HorizontalAlignment="Stretch"/>
+        <ProgressBar x:Name="ProgressBar" Margin="0,0,0,0" Grid.Row="2"/>
 
-	</Grid>
+    </Grid>
 </Window>
