--- a/xml.task/ExecutingWindow.xaml
+++ b/xml.task/ExecutingWindow.xaml
@@ -12,7 +12,15 @@
             <RowDefinition Height="5*"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <DataGrid Grid.Row="0"/>
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding Path=FlowsInfo}" 
+                      IsReadOnly="True" 
+                      CanUserAddRows="False" 
+                      CanUserSortColumns="False" Grid.Row="1" HorizontalGridLinesBrush="LightGray" VerticalGridLinesBrush="LightGray">
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="1*" Header="Параметр" Binding="{Binding Path=Parameter}"></DataGridTextColumn>
+                <DataGridTextColumn Width="1*" Header="Значение" Binding="{Binding Path=Value1}"></DataGridTextColumn>
+            </DataGrid.Columns>
+        </DataGrid>
         <ProgressBar x:Name="ProgressBar" Margin="0,0,0,0" Grid.Row="1"/>
 
     </Grid>
