--- a/xml.task/MainWindow.xaml
+++ b/xml.task/MainWindow.xaml
@@ -7,63 +7,69 @@
         xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" x:Class="xml.task.MainWindow"
         mc:Ignorable="d"
         Title="pnzo" Height="600" Width="1000" MinWidth="600" Unloaded="Window_Unloaded">
-	<Grid>
+    <Grid>
 
-		<Grid.RowDefinitions>
-			<RowDefinition Height="50" />
-			<RowDefinition Height="9*" />
-		</Grid.RowDefinitions>
-		<ToolBar Height="32" Grid.Row="0">
-			<Button Click="NewButton_Click">
-				<Image Source="Icons/new.png" />
-			</Button>
-			<Separator />
-			<Button Click="OpenButton_Click">
-				<Image Source="Icons/open.png" />
-			</Button>
-			<Separator />
-			<Button Click="SaveButton_Click">
-				<Image Source="Icons/save.png" />
-			</Button>
-			<Separator />
-			<Button Click="SaveAsButton_Click">
-				<Image Source="Icons/saveas.png" />
-			</Button>
-			<Button Click="ExecutingButton_Click">
-				<Image Source="Icons/run.png" />
-			</Button>
-			<Button Content="Пример" Click="ExampleButton_Click"/>
-			<Label x:Name="FileLabel" Content="" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-		</ToolBar>
-		<avalonedit:TextEditor
-			Name="TextEditor"
-			Grid.Row="1"
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50" />
+            <RowDefinition Height="9*" />
+        </Grid.RowDefinitions>
+        <ToolBar Height="32" Grid.Row="0" HorizontalAlignment="Left" Margin="0,9" Width="290">
+            <Button Click="NewButton_Click">
+                <Image Source="Icons/new.png" />
+            </Button>
+            <Separator />
+            <Button Click="OpenButton_Click">
+                <Image Source="Icons/open.png" />
+            </Button>
+            <Separator />
+            <Button Click="SaveButton_Click">
+                <Image Source="Icons/save.png" />
+            </Button>
+            <Separator />
+            <Button Click="SaveAsButton_Click">
+                <Image Source="Icons/saveas.png" />
+            </Button>
+            <Button Click="ExecutingButton_Click">
+                <Image Source="Icons/run.png" />
+            </Button>
+            <Button Content="Пример" Click="ExampleButton_Click"/>
+            <Button Content="Добавить" Click="Button_Click"/>
+        </ToolBar>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <avalonedit:TextEditor
+			x:Name="TextEditor"
 			FontFamily="Consolas"
 			FontSize="10pt"
 			SyntaxHighlighting="XML"
-			ShowLineNumbers="True" Margin="0,0,0,0" AllowDrop="True" PreviewDragOver="TextEditor_PreviewDragOver" PreviewDrop="TextEditor_PreviewDrop" BorderThickness="1" BorderBrush="Black">
-			<avalonedit:TextEditor.ContextMenu>
-				<ContextMenu>
-                    <MenuItem Header="Шаблон задания команды">
-                        <MenuItem Tag="stability" Header="Расчет динамики (stability)" Click="MenuItem_OnClick"/>
-                        <MenuItem Tag="write" Header="Изменение модели (write)" Click="MenuItem_OnClick"/>
-                        <MenuItem Tag="graph" Header="Построение графиков (graph)" Click="MenuItem_OnClick"/>
-					</MenuItem>
-                    <MenuItem Header="Шаблон задания файлов">
-                        <MenuItem Tag="file" Header="Один файл (file)" Click="MenuItem_OnClick"/>
-                        <MenuItem Tag="files" Header="Набор файлов (files)" Click="MenuItem_OnClick"/>
-                        <MenuItem Tag="folder" Header="Папка (folder)" Click="MenuItem_OnClick"/>
-                    </MenuItem>
-                    <Separator/>
-					<MenuItem Command="Undo" />
-					<MenuItem Command="Redo" />
-					<Separator/>
-					<MenuItem Command="Cut" />
-					<MenuItem Command="Copy" />
-					<MenuItem Command="Paste" />
-				</ContextMenu>
-			</avalonedit:TextEditor.ContextMenu>
-		</avalonedit:TextEditor>
+			ShowLineNumbers="True" AllowDrop="True" PreviewDragOver="TextEditor_PreviewDragOver" PreviewDrop="TextEditor_PreviewDrop" BorderThickness="1" BorderBrush="Black">
+                <avalonedit:TextEditor.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Шаблон задания команды">
+                            <MenuItem Tag="stability" Header="Расчет динамики (stability)" Click="MenuItem_OnClick"/>
+                            <MenuItem Tag="write" Header="Изменение модели (write)" Click="MenuItem_OnClick"/>
+                            <MenuItem Tag="graph" Header="Построение графиков (graph)" Click="MenuItem_OnClick"/>
+                        </MenuItem>
+                        <MenuItem Header="Шаблон задания файлов">
+                            <MenuItem Tag="file" Header="Один файл (file)" Click="MenuItem_OnClick"/>
+                            <MenuItem Tag="files" Header="Набор файлов (files)" Click="MenuItem_OnClick"/>
+                            <MenuItem Tag="folder" Header="Папка (folder)" Click="MenuItem_OnClick"/>
+                        </MenuItem>
+                        <Separator/>
+                        <MenuItem Command="Undo" />
+                        <MenuItem Command="Redo" />
+                        <Separator/>
+                        <MenuItem Command="Cut" />
+                        <MenuItem Command="Copy" />
+                        <MenuItem Command="Paste" />
+                    </ContextMenu>
+                </avalonedit:TextEditor.ContextMenu>
+            </avalonedit:TextEditor>
+        </Grid>
+        <Label x:Name="FileLabel" Content="" VerticalAlignment="Center" HorizontalAlignment="Center" Width="719" Margin="263,14,10,10"/>
 
 
     </Grid>
